# spienx-hub

./: .dockerignore  .env.docker  .gitignore  APPS.md  DOCKER.md  Dockerfile  GIT_MANAGEMENT.md  GUARDIAN_MIGRATION.md  LICENSE  README.md  REPOSITORY_HANDLERS.md  docker-compose.yml  manage.sh  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
_doctrees/: environment.pickle  index.doctree
docs/: conf.py  grpc.rst  index.rst
nginx/: hub.tastenmo.de.conf
src/accounts/: admin.py  models.py  serializers.py  services.py  tests.py
src/accounts/grpc/: __init__.py  accounts.proto  accounts_pb2.py  accounts_pb2_grpc.py
src/accounts/migrations/: 0001_initial.py  0002_team_alter_organisationinvite_role_and_more.py  0003_remove_userprofile_accounts_us_organis_c79eab_idx_and_more.py
src/config/: __init__.py  asgi.py  celery.py  grpc_handlers.py  settings.py  urls.py
src/core/: authentication.py  middleware.py  views.py
src/documents/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/documents/builder/: jsx_builder.py
src/documents/grpc/: documents.proto  documents_pb2.py  documents_pb2_grpc.py
src/documents/migrations/: 0001_initial.py  0002_alter_page_options_rename_document_page_build_and_more.py  0003_page_jsx_content.py
src/git/: admin.py  apps.py  handlers.py  models.py  services.py  services_backup.py
src/grpc_test_utils/: fake_grpc.py
src/repositories/: admin.py  apps.py  handlers.py  models.py  repo_handlers.py  repositories.proto  serializers.py  services.py
(+27 files in other folders)
